added data, and fixed method

--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -1,6 +1,5 @@
 \section{Data}
-The main input of the Article/Editors ranking algorithm is the matrix $M$ which determines, for a category on Wikipedia, which articles have modified at least once by each editor. We collected contribution data for articles in 10 categories (c.f. table \ref{tab:statistics} for summary statistics on the categories). In addition, we made 10 snapshots of equal number of edits to account for the evolution over time of each category (see Figure \ref{fig:accumulative_snapshots}
-).
+The main input of the Articles/Editors ranking method is the binary matrix $\mathbf{M_{e,a}}$ which determines, for a category on Wikipedia, which articles have been modified at least once by each editor. We collected all contribution data for all articles in 10 categories (c.f. table \ref{tab:statistics} for summary statistics on the categories). In addition, we made 10 snapshots of equal number of edits to account for the evolution over time of each category (see Figure \ref{fig:accumulative_snapshots}). For each snapshot, $\mathbf{M_{e,a}} =1$ if editor $e$ has modified article $a$ up to the snapshot, $\mathbf{M_{e,a}} =0$ otherwise. The final snapshot represents the entire history of the category up to the date of data collection (i.e., February 14, 2014).
 
 \begin{tabular}{llll}
 \toprule
@@ -25,14 +24,9 @@ Yoga &   730 &      123 &   25315 \\
 \begin{figure}[!t]
 \centering
 \includegraphics[width=0.9\columnwidth]{Figures/cumulative_snapshots_Feminist_Writers.eps}
-\caption{cumulative snapshots Feminist Writers eps }
+\caption{Typical snapshots for a category of Wikipedia (here, \textit{\textbf{Feminist Writers}} with one snapshot every 5,300 edits). As contributions go on, snapshots incorporate more information on whose editors have modified the articles in a category, hence filling further the matrix $\mathbf{M}$ (see Figure \ref{fig:matrix}).}
 \label{fig:figure1}
 \end{figure}
 
- For each snapshot, we constructed the matrix $\mathbf{M_{e,a}}$ of contributors versus edited articles, similar to the country versus products matrix of the Economics Domain. For each snapshot, the values in $\mathbf{M_{e,a}}$ are defined as the number of edits made by editor $e$ on article $a$ in the category occurring in the snapshot time. Note that the final snapshot represents the entire history of the category up to the present date.
-  
-The matrix $\mathbf{\hat{M}_{e,a}}$ is a binary representation of $\mathbf{M_{e,a}}$ where each nonzero entry is replaced with $1$. This represents if editors have touched which articles rather than how much they have touched each article. In the economics domain, the distinction of making a binary matrix out of the data is interpreted an alternative metric to GDP per capita, rather than GDP. Here we could also see the distinction as normalized editor fitness. It has a typical triangular structure as shown on Figure \ref{fig:triangular_matrix}. The matrix $\mathbf{\hat{M}_{e,a}}$ constitutes the basic input for implementing the Biased Markov Chain Approach, which we will call the $\mathbf{w^*}$ algorithm, which is an analytic solution to the iterative $\mathbf{W}$ algorithm. \cite{Caldarelli} 
-
-The exogenous metric for editors $v_e$ we take is $labour hours$. For each editor the contribution history upto the snapshot point,  divide into strings of $edit sessions$, edits that occur within 1 hour of the previous edit. Then $labour hours$ are determined by subtracting the looking at the total time between the first and last edit in each edit session, and then summing the labours of each edit session. \cite{Geiger, Halfaker}. 
-
-For an exogenous measure of article quality, $ v_a$,  we use a group of 5 text analysis metrics performed on Wikipedia articles at the lastest time in the snapshot. These are ratio of mark-up to readable text, number of headings, article length, citations per article length, and outgoing intrawiki links. To reduce the dimensionality of these 5 metrics, we perform Principal Component Analysis, and accept the principal component. Variance explained by the first principal component, was as high as .7 and never below .5 http://www-users.cs.umn.edu/~morten/publications/wikisym2013-tellmemore.pdf, http://mailer.fsu.edu/~bstvilia/papers/quantWiki.pdf \cite{ Morten}.
+To calibrate the editors/articles ranking method, namely $\alpha$ and $\beta$, we also collected expertise data for editors and quality metrics for articles, which are unrelated to the number of edits, and are considered as state-of-the-art metric although there is no consensus on expertise (resp. quality) of editors (resp. articles) on Wikipedia. The exogenous metric for editors $v_e$ we take is {\it labour hours} as defined by  \cite{halfaker/geiger}. The labor hours metric is determined by the number of hours between the first and the last edit of session of edits, in which two consecutive edits occur no longer than 1 hour from each others {\bf [Max, please confirm that I understood rightly, and also provide the reference ? ]}. {\bf [By the way, can you say in a nutshell why this metric is great ? or at least better than any other ?]}. There is no one single quality metric for articles. We therefore use a combination of five metrics : (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, and (v) outgoing intrawiki links \cite{wang2013tell,klein2014investigating}. We performed a Principal Component Analysis (PCA) , and reduced the five dimensions to the direction (first eigenvector) of
+ maximum variance. This aggregate metric $v_a$ accounts for between 50\% and 70\% of the variance, and thus recalls well the quality of articles. Both metrics are calculated for each category and each snapshot. For our model calibration purpose, $v_e$ and $v_a$ are the state-of-the-art and assumed to be the {\it Grand Truth}, even though their ability to reflect well expertise and quality remains questionable (see Section \ref{limitations} for further discussion).
