--- a/paper/sections/limitations.tex
+++ b/paper/sections/limitations.tex
@@ -1,5 +1,5 @@
 \section{Limitations}
-
+\label{limitations}
 We do not directly measure the {\it capabilities} of editors. For instance, what does one editor do best to improve an article, among the five metrics (ratio of mark-up to readable text, number of headings, article length, citations per article length, and outgoing intrawiki links) we have used to assess the quality of an article ? 
 
 We have not looked at the evolution of the quality of correlation as a function of iteration steps.
