--- a/paper/sigproc.bib
+++ b/paper/sigproc.bib
@@ -69,3 +69,10 @@ url = 	"http://www.nytimes.com/2013/04/28/opinion/sunday/wikipedias-sexism-towar
 	PUBLISHER = "John Wiley and Sons",
 	ADDRESS = "New York",
 	YEAR = "1978"	}
+
+
+@MISC{klein2014investigating,
+	AUTHOR = "Maximilian Klein",
+	TITLE = "Investigating Good Articles for Côte d’Ivoire and Uganda"
+	YEAR = "2014",
+	URL = "http://notconfusing.com/kumusha-takes-wiki-actionable-metrics-for-uganda-and-cote-divoire/"}
