starting writing results section

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,5 +1,9 @@
 \section{Results}
 
+\subsection{Editors/Articles Ranking Calibration}
+
+\subsection{Interpretation of the Biased Random Walker Calibration for each Category}
+
 
 \subsection{Correlations with exogenous variables}
 
