--- a/paper/sections/limitations.tex
+++ b/paper/sections/limitations.tex
@@ -10,3 +10,4 @@ Quality of the exogenous metrics, especially for editors. It would be definitely
 
 We only look at the ranking not at the real quality/expertise values ? Can we learn more the real values about the gap between articles/editors ?
 
+consider $\alpha$ and $\beta$ the same for $w_{a}$ and $w_{e}$
