--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -1,3 +1,35 @@
+@inproceedings{wang2013tell,
+    abstract = {{In this paper we address the problem of developing actionable quality models for Wikipedia, models whose features directly suggest strategies for improving the quality of a given article. We first survey the literature in order to understand the notion of article quality in the context of Wikipedia and existing approaches to automatically assess article quality. We then develop classification models with varying combinations of more or less actionable features, and find that a model that only contains clearly actionable features delivers solid performance. Lastly we discuss the implications of these results in terms of how they can help improve the quality of articles across Wikipedia.}},
+    address = {New York, NY, USA},
+    author = {Wang, Morten W. and Cosley, Dan and Riedl, John},
+    booktitle = {Proceedings of the 9th International Symposium on Open Collaboration},
+    citeulike-article-id = {13057265},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=2491063},
+    citeulike-linkout-1 = {http://dx.doi.org/10.1145/2491055.2491063},
+    doi = {10.1145/2491055.2491063},
+    isbn = {978-1-4503-1852-5},
+    keywords = {open\_source, wiki},
+    location = {Hong Kong, China},
+    posted-at = {2014-02-22 04:05:27},
+    priority = {2},
+    publisher = {ACM},
+    series = {WikiSym '13},
+    title = {{Tell Me More: An Actionable Quality Model for Wikipedia}},
+    url = {http://dx.doi.org/10.1145/2491055.2491063},
+    year = {2013}
+}
+
+@book{shamma2007cooperative,
+    author = {Shamma, Jeff S.},
+    citeulike-article-id = {13057164},
+    keywords = {*file-import-14-02-22},
+    posted-at = {2014-02-22 00:33:37},
+    priority = {2},
+    publisher = {Wiley Online Library},
+    title = {{Cooperative control of distributed multi-agent systems}},
+    year = {2007}
+}
+
 @article{page1999pagerank,
     author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
     citeulike-article-id = {13057092},
@@ -15390,23 +15422,4 @@ pragmatic.}},
     volume = {4},
     year = {1999}
 }
-
-@Misc{website:wikinewsreporter,
-OPTauthor = {Laura Hale},
-OPTtitle = {The role of English Wikipedia’s top content creators in perpetuating gender bias},
-OPThowpublished = {blog},
-OPTmonth = {2},
-OPTyear = {2014},
-url = 	"http://wikinewsreporter.wordpress.com/2014/02/10/the-role-of-english-wikipedias-top-content-creators-in-perpetuating-gender-bias/"
-}
-
-@Misc{website:nyt,
-OPTauthor = {Amanda Filipacchi},
-OPTtitle = {Wikipedias Sexism Toward Female Novelists},
-OPThowpublished = {news},
-OPTmonth = {4},
-OPTyear = {2013},
-url = 	"http://www.nytimes.com/2013/04/28/opinion/sunday/wikipedias-sexism-toward-female-novelists.html"
-}
-
 
