Made single word change in abstract -- testing ability to commit change

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -5,7 +5,7 @@ We introduce a new method to jointly rank the quality of articles and the expert
  the articles that have edited at least once by a given author on the other hand.
   We show that this ``reflexive" ranking method exhibits high correlations with 
   usual article quality and user expertise metrics, which account for quality on 
-  Wikipedia (that we assume to be a grand truth here). In particular, we find that 
+  Wikipedia (that we assume to be a ground truth here). In particular, we find that 
   the quality of an article can be captured very well by our method right after a few 
   edits, while the expertise of editors is captured increasingly better over time. 
   Our results suggest that it is easier to predict the quality of an article from the 
