first pass all the way trhough methods

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,14 +1,8 @@
 \begin{abstract}
-We introduce a new method to jointly rank the quality of articles and the expertise
- of editors in Categories of Wikipedia, based on the bi-partite network information 
- of who has contributed at least once to an article on the one hand, and what are 
- the articles that have edited at least once by a given author on the other hand.
-  We show that this ``reflexive" ranking method exhibits high correlations with 
-  usual article quality and user expertise metrics, which account for quality on 
-  Wikipedia (that we assume to be a grand truth here). In particular, we find that 
-  the quality of an article can be captured very well by our method right after a few 
-  edits, while the expertise of editors is captured increasingly better over time. 
-  Our results suggest that it is easier to predict the quality of an article from the 
-  editors who touched it, rather than editor expertise from articles they have 
-  edited.
+We introduce a new method to jointly rank the quality of articles and the expertise of editors in Categories of Wikipedia, based on the bi-partite network of contributions between editors and articles.
+We show that this so-called "reflexive" ranking method exhibits high correlations with usual article quality and user expertise metrics, which account for quality on Wikipedia (that we assume to be a grand truth here). 
+In particular, we find that the quality of an article can be captured very well by our method right after a few edits, while the expertise of editors is captured increasingly better over time. 
+Our results suggest that it is easier to predict the quality of an article from the 
+editors who touched it, rather than editor expertise from articles they have 
+edited.
 \end{abstract}
